bugfix: fix wrapping of events and hero image

--- a/web/pages/index.css
+++ b/web/pages/index.css
@@ -49,7 +49,7 @@ section.home {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../public/hero.png");
+    background-image: url("/hero.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
